SCRUM-11: Add pet owner association
